fix: summary save status massage visibility issue fixed

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ textarea {
   border-radius: 5px;
   width: 40%;
   cursor: pointer;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .about-btn:hover {
@@ -102,9 +102,10 @@ textarea {
 #status {
   font-size: 12px;
   margin-top: 10px;
-  color: lightgreen;
-  /*transition: opacity 0.5s ease-in-out;  Smooth fade-in and fade-out */
+  opacity: 0; /* Initially hidden */
+  transition: opacity 0.5s ease-in-out; /* Smooth fade-in and fade-out */
 }
+
 
 /* Buttons */
 button {
@@ -141,7 +142,7 @@ button {
   background: linear-gradient(90deg, #4CAF50, #2E7D32);
   color: white;
   border: none;
-  padding: 12px;
+  padding: 14px;
   font-size: 16px;
   font-weight: bold;
   border-radius: 5px;
